fix: text align to left

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -90,7 +90,7 @@ h2, h3, h4, h5, h6, .nav__title {
 }
 
 .page__content p, ul {
-    text-align: justify;
+    text-align: left;
 }
 
 .social-icons .fa-instagram, .social-icons .fa-linkedin, .social-icons .fa-twitter, .social-icons .fa-twitter-square {
